feat: improve PlanComparisonService with null safety checks and enhanced logging